--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
   <body>
     <h1>Bienvenido a <%= title %></h1>
     <p>El portal del juego sencillo de preguntas</p>
+    <p><a href="/quizes/question">Comenzar</a></p>
   </body>
 </html>
