--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>SimpleQuiz</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-  <h2>SimpleQuiz: el juego de las preguntas</h2>
-
-  <%= respuesta %><p>
-  <a href="/quizes/question"> Intentelo de nuevo </a>
-  </body>
-</html>
+<p><%= respuesta %></p>
