--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,7 +33,9 @@
 
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
+      ¿Que es un Quiz?</a><br>
+    <a href="https://github.com/juancalsen/simplequiz">
+      Repositorio en GitHub</a>
   </footer>
 </div>
 </body> 
